WIP: implemented Role resource, JWT, custom auth filters
