# src/main/java/juicenetcafe/userservice/controllers/UserController.java
@@ -1,8 +1,10 @@
 package juicenetcafe.userservice.controllers;
 
 import juicenetcafe.userservice.entities.User;
+import juicenetcafe.userservice.pojos.RoleToUser;
 import juicenetcafe.userservice.services.UserService;
 import lombok.RequiredArgsConstructor;
+import org.jetbrains.annotations.NotNull;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -25,6 +27,13 @@ public class UserController {
     @PostMapping
     public ResponseEntity<User> create(@Valid @RequestBody User user) {
         return new ResponseEntity<>(userService.create(user), HttpStatus.CREATED);
+    }
+
+    @PostMapping("/role/add")
+    public ResponseEntity<?> addRoleToUser(@RequestBody @NotNull RoleToUser form) {
+        userService.addRoleToUser(form.getUsername(), form.getRoleName());
+
+        return ResponseEntity.ok().build();
     }
 
     @GetMapping("/{username}")
